修改baseURL，增加标签、分类、归档，显示文章Toc，显示中文
另小修小改

--- a/public/index.html
+++ b/public/index.html
@@ -119,9 +119,14 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="/posts" rel="noopener" title="发布">
+            <a class="button" href="/posts" rel="noopener" title="最新">
                 <span class="button-inner">
-                    发布
+                    最新
+                </span>
+            </a>
+            <a class="button" href="/categories" rel="noopener" title="分类">
+                <span class="button-inner">
+                    分类
                 </span>
             </a>
             <a class="button" href="/archives" rel="noopener" title="归档">
