增加主页头像，按钮转至menu栏，增加邮箱图标，删除测试md

--- a/public/index.html
+++ b/public/index.html
@@ -100,13 +100,43 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://localhost:1313/posts" title="最新">
+                    <span>最新</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/categories" title="分类">
+                    <span>分类</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/archives" title="归档">
+                    <span>归档</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://localhost:1313/about" title="关于">
+                    <span>关于</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
+            <img draggable="false" src="http://localhost:1313/img/avatar.jpg" alt="profile image" title=""
+                height="150" width="150" />
         <h1>FICN的博客</h1>
-        <span>欢迎</span><div class="social-icons" >
+        <span>记录生活，分享技术</span><div class="social-icons" >
+    <a href="mailto:fnicen@qq.com" target="_blank" rel="noopener noreferrer me"
+        title="Email">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+    <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
     <a href="https://github.com/FnICeN" target="_blank" rel="noopener noreferrer me"
         title="Github">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -118,28 +148,6 @@
     </a>
 </div>
 
-        <div class="buttons">
-            <a class="button" href="/posts" rel="noopener" title="最新">
-                <span class="button-inner">
-                    最新
-                </span>
-            </a>
-            <a class="button" href="/categories" rel="noopener" title="分类">
-                <span class="button-inner">
-                    分类
-                </span>
-            </a>
-            <a class="button" href="/archives" rel="noopener" title="归档">
-                <span class="button-inner">
-                    归档
-                </span>
-            </a>
-            <a class="button" href="/about" rel="noopener" title="关于">
-                <span class="button-inner">
-                    关于
-                </span>
-            </a>
-        </div>
     </div>
 </div>
 
